# ezecs

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
network/: CMakeLists.txt  client.cpp  client.hpp  constants.hpp  discord.cpp  discord.hpp  netInterface.cpp  netInterface.hpp  server.cpp  server.hpp
source/: CMakeLists.txt  ecsComponents.cpp  ecsComponents.hpp  ecsDelegate.hpp  ecsGenerator.cpp  ecsHelpers.cpp  ecsHelpers.hpp  ecsKvMap.hpp  ecsState.cpp  ecsState.hpp  ecsSystem.hpp  ecsTypes.hpp  ezecs.hpp  generator.cpp
test/: CMakeLists.txt  ecsConfig.hpp  main.cpp
test/basic/: CMakeLists.txt
test/tiered/: CMakeLists.txt
tests/: CMakeLists.txt
tests/basic/: CMakeLists.txt  ecsConfig.hpp
tests/tiered/: CMakeLists.txt  main.cpp
tests/tiered/core/: CMakeLists.txt  coreSystems.cpp  coreSystems.hpp  ecsConfig.hpp
tests/tiered/shell/: CMakeLists.txt  ecsConfig.hpp
tests/tiered/valence/: ecsConfig.hpp
tests/tiered/yours/: CMakeLists.txt  main.cpp
